# sql-llm

./: .env.example  README.md  main.py  pyproject.toml
api/: __init__.py  app.py
api/integrations/: db.py  openai.py
api/v1/: __init__.py  llm.py
